--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,5 @@
 body {
   margin: 0;
-  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif; */
   font-family: 'Raleway', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -14,6 +11,10 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.title {
+  font-size: 400%;
 }
 
 .project-container {
@@ -42,7 +43,7 @@ body {
 .contact-cont {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 
 .divider {
@@ -50,9 +51,6 @@ body {
   border-width: 0 3px 3px 0;
 }
 
-.title {
-  font-size: 800%;
-}
 
 a {
   color: white;
