makes app mobile friendly

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,6 +17,12 @@ body {
   font-size: 25px;
 }
 
+  @media screen and (max-width: 648px) {
+    .App {
+      font-size: 14px;
+    }
+  }
+
 .name {
   font-size: 2em;
   text-align: center;
@@ -24,18 +30,25 @@ body {
 
 .language {
   text-align: right;
-  /* padding: 10px; */
-  font-size: 20px;
-}
-
-.t {
-  text-align: right;
   padding: 10px;
   font-size: 20px;
 }
 
+@media screen and (max-width: 648px) {
+  .language {
+    font-size: 10px;
+  }
+}
+
+
 .title {
   font-size: 40px;
+}
+
+@media screen and (max-width: 648px) {
+  .title {
+    font-size: 20px;
+  }
 }
 
 .bio {
@@ -49,7 +62,6 @@ body {
 
 .bio-desc {
   width: 80%;
-  
 }
 
 .skills {
@@ -75,7 +87,15 @@ body {
   height: 200px;
   width: 300px;
 }
-@media screen and (min-width: 600px) {
+
+@media screen and (max-width: 648px) {
+  .img-crd {
+    height: 100px;
+    width: 150px;
+  }
+}
+
+@media screen and (min-width: 648px) {
   .img-crd:hover {
     margin-top:8px;
     vertical-align: middle;
@@ -89,6 +109,17 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+}
+
+.contact {
+  font-size: 25px;
+}
+
+@media screen and (max-width: 600px) {
+  .contact {
+  padding: 3px;
+  font-size: 12px;
+  }
 }
 
 .divider {
