--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,6 +28,12 @@ body {
   text-align: center;
 }
 
+@media screen and (max-width: 648px) {
+  .name {
+    font-size: 1.9em;
+  }
+}
+
 .language {
   text-align: right;
   padding: 10px;
